# MDM-VGB

./: README.md  base_model_rollout.py  base_model_training.py  environment.yml  inference.py  prepare_assets.py  pyproject.toml  verifier_training.py
configs/: main.yaml
configs/dna_deepstarr/: dna_deepstarr_inference.yaml  dna_deepstarr_rollout.yaml  dna_deepstarr_verifier_training.yaml
configs/dyck/: dyck_base_model_training.yaml  dyck_inference.yaml  dyck_rollout.yaml  dyck_verifier_training.yaml
configs/letter/: letter_inference.yaml  letter_rollout.yaml  letter_verifier_training.yaml
configs/protein_scaffold/: protein_scaffold_inference.yaml  protein_scaffold_rollout.yaml  protein_scaffold_verifier_training.yaml
configs/qm9/: qm9_base_model_training.yaml  qm9_inference.yaml  qm9_rollout.yaml  qm9_verifier_training.yaml
configs/sudoku/: sudoku_base_model_training.yaml  sudoku_inference.yaml  sudoku_rollout.yaml  sudoku_verifier_training.yaml
data/evodiff_scaffold/: 1ycr_official_13mer_tasks.jsonl  1ycr_official_13mer_tasks_paper100.jsonl
data/evodiff_scaffold/native_coords/: 1ycr_chainB_etfsdlwkllpen_ca.npy  1ycr_chainB_etfsdlwkllpen_ca_paper.npy
data/sudoku/: hard_sudokus_valid.csv
src/: utils.py
src/algorithms/: __init__.py  algorithm_utils.py  config.py  vgb.py  vgb_candidates.py  vgb_momentum.py  vgb_terminal.py  vgr.py
src/tasks/: __init__.py  common.py  interfaces.py
src/tasks/dna_deepstarr/: build_base_calibration.py  deepstarr.py  deepstarr_oracle.py  harness.py  task.py  (+2 more)
tests/: test_algorithm_config.py  test_sudoku_base.py
(+28 files in other folders)
